samples/_failures_safe/1761361035_18bdf1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8434e7a7.c: In function ‘main’:
./samples/SAFE/__tmp_8434e7a7.c:159:12: error: missing terminating " character
  159 |     printf("Shortest distances from node %d:\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8434e7a7.c:159:5: error: expected expression at end of input
  159 |     printf("Shortest distances from node %d:\
      |     ^~~~~~
./samples/SAFE/__tmp_8434e7a7.c:159:5: error: expected declaration or statement at end of input
